--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       html, body {
         margin: 0;
         padding: 0;
-        background: linear-gradient(180deg, rgba(116, 96, 8, 0.714) 7%, rgb(18, 21, 8) 46%, rgb(0, 0, 0) 93%);
+        overflow-x: hidden;
+        background: linear-gradient(180deg, rgba(175, 136, 8, 0.714) 7%, rgb(18, 21, 8) 46%, rgb(0, 0, 0) 93%);
         height: 100vh;
       }
     </style>
