--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         margin: 0;
         padding: 0;
         overflow-x: hidden;
-        background: linear-gradient(180deg, rgba(175, 136, 8, 0.714) 7%, rgb(18, 21, 8) 46%, rgb(0, 0, 0) 93%);
+        background: linear-gradient(180deg, rgba(8, 5, 2, 0.714) 7%, rgb(222, 185, 22) 46%, rgb(221, 159, 53) 93%);
         height: 100vh;
+        overscroll-behavior: none;
       }
     </style>
   </head>
