--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         margin: 0;
         padding: 0;
         overflow-x: hidden;
-        background: linear-gradient(180deg, rgba(8, 5, 2, 0.714) 7%, rgb(222, 185, 22) 46%, rgb(221, 159, 53) 93%);
+        background: linear-gradient(180deg, rgba(8, 5, 2, 0.714) 16%, rgb(222, 175, 22) 66%);
         height: 100vh;
         overscroll-behavior: none;
       }
